# react-native-helium

./: .eslintignore  .gitconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  android_cross.txt  build_icu_android.sh  example_build.txt  ios_cross.txt  ios_cross_sim.txt  package.json  qlik-oss-react-native-helium.podspec  tsconfig.json
.github/actions/yarn_install/: action.yml
.github/workflows/: release.yml
Helium4/: App.js  Picture.js  app.json  index.js  metro.config.js  package.json
Helium4/__tests__/: App-test.js
Helium4/android/: build.gradle  gradle.properties  settings.gradle
Helium4/android/app/: _BUCK  build.gradle
Helium4/android/app/src/debug/java/com/helium4/: ReactNativeFlipper.java
Helium4/android/app/src/main/: AndroidManifest.xml
Helium4/android/app/src/main/java/com/helium4/: MainActivity.java  MainApplication.java
Helium4/android/app/src/main/jni/: Android.mk  MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
Helium4/android/app/src/main/res/values/: strings.xml
Helium4/ios/: Podfile
Helium4/ios/Helium4/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
Helium4/ios/Helium4.xcodeproj/: project.pbxproj
Helium4/ios/Helium4.xcworkspace/: contents.xcworkspacedata
Helium4/ios/Helium4Tests/: Helium4Tests.m
android/: CMakeLists.txt  build.gradle  gradle.properties
android/cpp/: CanvasEGLRenderer.cpp  CanvasEGLRenderer.h  CanvasViewManger.h  JNICanvasViewService.cpp  JNICanvasViewService.h  Platform.h  RenderThread.cpp  RenderThread.h  jsi-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/qlikossreactnativehelium/: CanvasView.kt  CanvasViewManager.kt  CanvasViewService.kt  ReactNativeHeliumModule.kt  ReactNativeHeliumPackage.kt
argsgn/: args.gn.android  args.gn.ios
cpp/jsi/: AABox.cpp  AABox.h  ActiveStyle.cpp  ActiveStyle.hpp  BoundingVolume.h  CanvasApiHost.cpp  CanvasApiHost.h  Circle.cpp  Circle.h  FontRunner.cpp  FontRunner.hpp  Helium.h  LassoLayer.cpp  LassoLayer.hpp  Line.cpp  Line.h  MeasureText.cpp  MeasureText.h  ObjectPool.h  Path.cpp  Path.h  Platform.h  QuadTree.hpp  Rect.cpp  Rect.h  Rectangle.cpp  Rectangle.h  RunIterators.h  SelectionBrush.cpp  SelectionBrush.hpp  SelectionsEngine.cpp  SelectionsEngine.h  Shape.cpp  Shape.h  ShapeFactory.cpp  ShapeFactory.h  Singleton.h  Text.cpp  Text.h  TextRunHundler.cpp  (+6 more)
cpp/render/: SkiaRenderView.cpp  SkiaRenderView.h
ios/: CanvasRenderManager.mm  CanvasView.h  CanvasView.mm  CanvasViewManger.h  MetalLayer.h  MetalLayer.mm  MetalRenderer.h  MetalRenderer.mm  ReactNativeHelium.h  ReactNativeHelium.mm  RenderThread.hpp  RenderThread.mm
ios/ReactNativeHelium.xcodeproj/: project.pbxproj
skialib/ICU.xcframework/: Info.plist
skialib/harfbuzz.xcframework/: Info.plist
skialib/include/core/: SkLRUCache.h
skialib/modules/skparagraph/include/: ParagraphCache.h
skialib/skia.xcframework/: Info.plist
skialib/skiasvg.xcframework/: Info.plist
skialib/skparagraph.xcframework/: Info.plist
skialib/skshaper.xcframework/: Info.plist
skialib/skunicode.a.xcframework/: Info.plist
src/: Setup.tsx  index.tsx
src/components/: Canvas.tsx  CanvasApi.ts
(+3 files in other folders)
